@@ -1,5 +1,5 @@
 DIST gimp-2.3.15.tar.bz2 16080133 RMD160 8c2017dccf188fe2b76e8a15acdc91c338c3457a SHA1 7447afd00d2940e2dd02edfc92575715d3a52936 SHA256 419f42a6e9b305a6b7870771ef072e64265f9332f8dcfa341ba14f5216aa0ac7
 EBUILD gimp-2.3.15.ebuild 3079 RMD160 4d0aed9bb8174b7dc2d40d937909630fe5fcfc61 SHA1 dbda292fb2e86dc8e9aa0e659f481855f81d8741 SHA256 2640194b7151e3b605cbdf7ca449d0da5b3d2a16495cb5f70648adc357ddc222
-EBUILD gimp-9999.ebuild 3280 RMD160 245f35e569104464e6083c26abddf79a4499bb6e SHA1 84ce421e25bb8726e724d195d5fbb6900e59ec19 SHA256 e01f9be4a44a7fd7cbdec1a5c642282f152e587941224c122dd14ef4750fe203
-MISC ChangeLog 27804 RMD160 e4d18dffc8051e527d6d6435a104680ae0e2c0bd SHA1 2aee3116453764747bd4450864df62107e7aab8c SHA256 0aa9f123a0115a5312c0d7b4acdc22f027fb9182f5ec0a629ba6687451069a83
+EBUILD gimp-9999.ebuild 3489 RMD160 90e1e6d602c329f49059a7b94fffb558db116c67 SHA1 e8d23409e09d13fb8c3c47dea636b271b6374d0d SHA256 1d7fc0763f1d198263288859082737ebb7b83e9471aaa160188f59bf6b02c650
+MISC ChangeLog 28038 RMD160 c48ed0c48a1e2604eae505eb92daf3fe89634cd6 SHA1 4039a872f32389cc6ae1f5d77220224229f22b16 SHA256 0337f9d22e086877c5b3bfbe7020465db360755f42898c5631c076ae9bacfbd7
 MISC metadata.xml 220 RMD160 a49072631c03f8ac3685b12169abeef3b34ad3d6 SHA1 9614887db749b0a3c17016da5b3ec0e42b908ad3 SHA256 c893488c84e6da8039f2b473982f03e934ec12f8fe2c1ace770f9e34969db081
