@@ -1,6 +1,13 @@
 # ChangeLog for media-gfx/gimp
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/gimp/ChangeLog,v 1.195 2007/05/03 18:42:29 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/gimp/ChangeLog,v 1.197 2007/05/06 16:50:48 hanno Exp $
+
+  06 May 2007; Hanno Boeck <hanno@gentoo.org> gimp-2.2.14.ebuild,
+  gimp-2.3.16.ebuild, gimp-9999.ebuild:
+  Add python_mod_optimize/cleanup.
+
+  06 May 2007; Roy Marples <uberlord@gentoo.org> gimp-2.3.16.ebuild:
+  Added ~x86-fbsd keyword.
 
   03 May 2007; Tobias Scherbaum <dertobi123@gentoo.org> gimp-2.2.14.ebuild:
   ppc stable, bug #176226
